[gd_scene load_steps=19 format=3 uid="uid://bgvu60lqu4l8r"]

[ext_resource type="Script" path="res://Assets/Scripts/Player/BoomCharacterController.gd" id="1_qb6dm"]
[ext_resource type="PackedScene" uid="uid://bxsyt8wh11csk" path="res://Assets/Components/boom_movement_state_component.tscn" id="2_lv1gn"]
[ext_resource type="PackedScene" uid="uid://c00c52paj3081" path="res://Assets/Components/movement_forces_component.tscn" id="3_wkao6"]
[ext_resource type="PackedScene" uid="uid://crcb36tldqy6a" path="res://Assets/Components/boost_manager_component.tscn" id="4_u34un"]
[ext_resource type="PackedScene" uid="uid://cackjanb06utk" path="res://Assets/Components/suspension_component.tscn" id="5_4fdww"]
[ext_resource type="Script" path="res://Assets/Scripts/Player/BoomSoundManager.gd" id="6_ampn0"]
[ext_resource type="AudioStream" uid="uid://cpp4egpd032n1" path="res://Assets/Sounds/sonic_boost_session.wav" id="7_d2uk4"]
[ext_resource type="AudioStream" uid="uid://1ai65nai14aj" path="res://Assets/Sounds/wind-sound.wav" id="8_3yax7"]
[ext_resource type="AudioStream" uid="uid://cd58oqk7yetc3" path="res://Assets/Sounds/sonic-roll.wav" id="9_v77wf"]
[ext_resource type="Script" path="res://Assets/Scripts/Player/VelocityArrow.gd" id="11_yveot"]
[ext_resource type="Script" path="res://Assets/Scripts/Player/WishDirArrow.gd" id="12_hu33n"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_ovoo0"]
friction = 0.0

[sub_resource type="SphereShape3D" id="SphereShape3D_5xidp"]

[sub_resource type="SphereMesh" id="SphereMesh_3aq0f"]

[sub_resource type="SphereMesh" id="SphereMesh_ptosa"]

[sub_resource type="BoxMesh" id="BoxMesh_f2ryp"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5f2yt"]
albedo_color = Color(0, 0, 1, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_q07k5"]
albedo_color = Color(1, 0, 0, 1)

[node name="Player" type="RigidBody3D"]
mass = 25.0
physics_material_override = SubResource("PhysicsMaterial_ovoo0")
continuous_cd = true
max_contacts_reported = 12
contact_monitor = true
script = ExtResource("1_qb6dm")

[node name="BoomMovementStateComponent" parent="." instance=ExtResource("2_lv1gn")]

[node name="MovementForcesComponent" parent="." instance=ExtResource("3_wkao6")]

[node name="CoyoteJumpTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="BoostManagerComponent" parent="." instance=ExtResource("4_u34un")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_5xidp")

[node name="SuspensionComponent" parent="." instance=ExtResource("5_4fdww")]

[node name="SuspensionModel" type="MeshInstance3D" parent="SuspensionComponent"]
mesh = SubResource("SphereMesh_3aq0f")
skeleton = NodePath("")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("SphereMesh_ptosa")

[node name="BoomSoundManager" type="Node3D" parent="."]
script = ExtResource("6_ampn0")

[node name="BoostSoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_d2uk4")

[node name="WindSoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_3yax7")

[node name="RollSoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_v77wf")

[node name="AudioListener3D" type="AudioListener3D" parent="."]

[node name="VelocityArrowContainer" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
script = ExtResource("11_yveot")

[node name="VelocityArrow" type="MeshInstance3D" parent="VelocityArrowContainer"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 1.25, 0, 0, -0.5)
mesh = SubResource("BoxMesh_f2ryp")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_5f2yt")

[node name="WishDirArrowContainer" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, 0)
script = ExtResource("12_hu33n")

[node name="WishDirArrow" type="MeshInstance3D" parent="WishDirArrowContainer"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 1.25, 0, 0, -0.5)
mesh = SubResource("BoxMesh_f2ryp")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_q07k5")

[connection signal="body_entered" from="." to="MovementForcesComponent" method="_on_player_body_entered"]
[connection signal="move_state_changed" from="BoomMovementStateComponent" to="BoomSoundManager" method="_on_boom_movement_state_component_move_state_changed"]
